2016-07-17  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Correct source package omission of msvcrt-xref subdirectory.

	* Makefile.in (mingwrt-srcdist-files): Add msvcrt-xref.

2016-07-14  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Prepare and tag all files for release of mingwrt-3.22.

	* configure.ac (AC_INIT): Adjust package version number.

2016-07-14  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Preserve kludge to evade GCC build failure on S_ISBLK misuse.

	* include/sys/stat.h (_NO_UNSUPPORTED): New feature test macro; it
	should be user defined, if desired, before inclusion; leave undefined.
	[!_S_IFBLK && !_NO_UNSUPPORTED && !_NO_OLDNAMES] (S_ISBLK): Define it,
	as appropriate for POSIX conforming usage; do not poison it.

2016-07-10  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Fix C++ strict type checking inconsistency in <glob.h>

	* include/glob.h (__ERRFUNC_P): New private macro; define it to match
	the type signature of the error function pointer, to be passed to...
	(glob): ...this function; use it to correctly represent error function
	pointer argument in inline implementation.

2016-07-09  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Factor out <ctype.h> vs. <wctype.h> duplicate elements.

	* include/ctype.h: Assert copyright; tidy layout.
	[!_CTYPE_H_]: Do not evaluate; rename macro to be tested, as...
	[!_CTYPE_H]: ...this preferred multiple inclusion guard macro name.
	(__CTYPE_H_SOURCED__): New macro; define it, and include <wctype.h>,
	so requesting partial inclusion, to retrieve definitions for...
	(_ALPHA, _BLANK, _CONTROL, _DIGIT, _HEX, _LOWER, _PUNCT, _SPACE)
	(_UPPER, WEOF): ...these macros; hence, do not define them locally.
	(wint_t, wchar_t, wctype_t): Likewise these type definitions...
	(iswalnum, iswalpha, iswascii, iswblank, iswcntrl, iswctype)
	(iswdigit, iswgraph, iswlower, iswprint, iswpunct, iswspace)